Bug 1663500 - Revert bug 1661643 change and resurrect browser.link.open_newwindow=1. r=Gijs,preferences-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D89447