toolkit/components/windowwatcher/nsWindowWatcher.cpp
@@ -2455,10 +2455,6 @@ int32_t nsWindowWatcher::GetWindowOpenLocation(nsPIDOMWindowOuter* aParent,
     return nsIBrowserDOMWindow::OPEN_NEWTAB;
   }
 
-  if (containerPref != nsIBrowserDOMWindow::OPEN_NEWTAB) {
-    containerPref = nsIBrowserDOMWindow::OPEN_NEWWINDOW;
-  }
-
   bool isDisabledOpenNewWindow =
       aParent->GetFullScreen() &&
       Preferences::GetBool(
@@ -2469,7 +2465,8 @@ int32_t nsWindowWatcher::GetWindowOpenLocation(nsPIDOMWindowOuter* aParent,
     containerPref = nsIBrowserDOMWindow::OPEN_NEWTAB;
   }
 
-  if (containerPref == nsIBrowserDOMWindow::OPEN_NEWWINDOW) {
+  if (containerPref != nsIBrowserDOMWindow::OPEN_NEWTAB &&
+      containerPref != nsIBrowserDOMWindow::OPEN_CURRENTWINDOW) {
     // Just open a window normally
     return nsIBrowserDOMWindow::OPEN_NEWWINDOW;
   }
