browser/base/content/browser.js
@@ -6030,23 +6030,18 @@ nsBrowserAccess.prototype = {
     }
 
     if (aWhere == Ci.nsIBrowserDOMWindow.OPEN_DEFAULTWINDOW) {
-      let pref;
       if (
         isExternal &&
         Services.prefs.prefHasUserValue(
           "browser.link.open_newwindow.override.external"
         )
       ) {
-        pref = Services.prefs.getIntPref(
+        aWhere = Services.prefs.getIntPref(
           "browser.link.open_newwindow.override.external"
         );
       } else {
-        pref = Services.prefs.getIntPref("browser.link.open_newwindow");
+        aWhere = Services.prefs.getIntPref("browser.link.open_newwindow");
       }
-      aWhere =
-        pref == 3
-          ? Ci.nsIBrowserDOMWindow.OPEN_NEWTAB
-          : Ci.nsIBrowserDOMWindow.OPEN_NEWWINDOW;
     }
 
     let referrerInfo;
